<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".Register">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:src="@drawable/img"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/login"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/vous_avez_deja_un_compte_connectez_vous_ici"
            />
    </LinearLayout>

</LinearLayout>